--- a/.github/workflows/review_comment.yml
+++ b/.github/workflows/review_comment.yml
@@ -11,6 +11,13 @@ jobs:
         run: |
           echo "Review comment: ${{ github.event.review.body }}"
           echo "Reviewed commit: ${{ github.event.review.commit_id }}"
+      - name: (PR review) Checkout review SHA
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.events.review.commit_id }}
+      - name: Print content
+        run: |
+          cat foo
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
