--- a/.github/workflows/review_comment.yml
+++ b/.github/workflows/review_comment.yml
@@ -8,13 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: PR review commit ID
+        id: cid
         run: |
           echo "Review comment: ${{ github.event.review.body }}"
           echo "Reviewed commit: ${{ github.event.review.commit_id }}"
+          echo "sha=${{ github.event.review.commit_id }}\n" >> $GITHUB_OUTPUT
+      - name: Target commit
+        run: |
+          echo ${{ steps.cid.outputs.sha }}
       - name: (PR review) Checkout review SHA
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.events.review.commit_id }}
+          ref: ${{ steps.cid.outputs.sha }}
       - name: Print content
         run: |
           cat foo
