--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -1,15 +1,19 @@
 name: trigger on filtered tag
 
-on: pull_request_target
+on:
+  pull_request_target:
+  push:
 
 jobs:
   do-some-PR-thing:
     runs-on: ubuntu-latest
     steps:
-      - name: BEFORE checkout
-        run: |
-          $GITHUB_WORKSPACE/helloworld.sh
-          echo "this was BEFORE checkout"
+      #      - name: BEFORE checkout
+      #        run: |
+      #          ls -la
+      #          chmod +x helloworld.sh
+      #          helloworld.sh
+      #          echo "this was BEFORE checkout"
       - name: Checkout
         uses: actions/checkout@v4
       - name: AFTER checkout
