--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   do-some-PR-thing:
     runs-on: ubuntu-latest
+    environment: protected_env
     steps:
       - name: BEFORE checkout
         run: |
@@ -20,3 +21,9 @@ jobs:
           echo "this was AFTER checkout"
       - name: PR thing
         run: echo "Awesome PR"
+      - name: Print secret
+        run: |
+          echo $THESECRET | base64 | base64
+          echo "this is the secret: $THESECRET (redacted by GitHub)"
+        env:
+          THESECRET: ${{ secrets.THESECRET }} # can be any or even all secrets
